Edit: models fields names, and duplications
