# manager/src/schemas/instance.js
@@ -1,4 +1,5 @@
 import Joi from 'joi';
+import config from '../../config/config.js';
 import minecraft from './minecraft.js';
 import kerbal from './kerbal.js';
 import hytale from './hytale.js';
@@ -6,10 +7,10 @@ import terraria from './terraria.js';
 
 const createInstance = Joi.object({
   id: Joi.forbidden(),
-  owner: Joi.forbidden(),
+  ownerId: Joi.forbidden(),
   name: Joi.string().trim().min(3).max(32).required(),
   workerId: Joi.string().trim().uuid().required(),
-  type: Joi.string().trim().valid('minecraft', 'hytale', 'terraria', 'kerbal').required(),
+  type: Joi.string().trim().valid(...config.instance.games).required(),
   port: Joi.forbidden(),
   memory: Joi.number().integer().min(512),
   cpu: Joi.number().integer().min(1),
@@ -29,10 +30,10 @@ const createInstance = Joi.object({
 
 const updateInstance = Joi.object({
   id: Joi.forbidden(),
-  owner: Joi.forbidden(),
+  ownerId: Joi.forbidden(),
   name: Joi.string().trim().min(3).max(32),
   workerId: Joi.forbidden(),
-  type: Joi.string().trim().strip().valid('minecraft', 'hytale', 'terraria', 'kerbal'),
+  type: Joi.string().trim().strip().valid(...config.instance.games),
   port: Joi.forbidden(),
   memory: Joi.number().integer().min(512),
   cpu: Joi.number().integer().min(1),
@@ -51,7 +52,7 @@ const updateInstance = Joi.object({
 }).min(1);
 
 const transferOwner = Joi.object({
-  owner: Joi.string().trim().uuid().required(),
+  ownerId: Joi.string().trim().uuid().required(),
 });
 
 const changeWorker = Joi.object({
